POR/RefEdge/src/objects/Reference_Type_Mapping__c.object
<CustomObject>
    <description>Custom Object store mapping Reference Type with Field Label or Attribute Label for &apos;visible&apos; and &apos;Required&apos; Information used in Request Matrix( Bound 3)</description>
    <fields>
        <fullName>Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Label</label>
        <referenceTo>Label__c</referenceTo>
        <relationshipLabel>Reference Type Mappings</relationshipLabel>
        <relationshipName>Reference_Type_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_Content_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Content Type</label>
        <referenceTo>Reference_Content_Type__c</referenceTo>
        <relationshipLabel>Reference Type Mappings</relationshipLabel>
        <relationshipName>Reference_Type_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referenceability_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referenceability Type</label>
        <referenceTo>Referenceability_Type__c</referenceTo>
        <relationshipLabel>Reference Type Mappings</relationshipLabel>
        <relationshipName>Reference_Type_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Reference Type Mapping</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference Type Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>